feat: se agraga lista producos

--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -1,1 +1,21 @@
-<p>productos works!</p>
+<div class="row row-cols-1 row-cols-md-3 g-4">
+    
+    <div class="col" *ngFor="let producto of productos">
+        <div class="card">
+
+            <img [src]="producto.imagen | noImage" class="card-img-top" [alt]="producto.nombre">
+            <div class="card-body">
+                <h5 class="card-title">{{ producto.nombre }}</h5>
+                <p class="card-text">{{ producto.descripcion }}</p>
+                <span class="badge bg-primary">Stock: {{producto.cantidadStock}}</span>
+                <span class="badge bg-success">Precio: {{producto.precio}}</span>
+                <!-- <p class="card-text"><small class="text-muted">{{ producto }}</small></p> -->
+                <!-- </div> -->
+                <button (click)="agregarLista(producto)" type="button" class="btn btn-outline-primary btn-block">Agregar a Mis Deseos</button>
+                <!-- <a [routerLink]="['/producto']" href="" class="btn btn-outline-primary btn-block">Ver mas link</a> -->
+
+            </div>
+    </div>
+</div>
+  
+
