--- a/src/app/deseos/deseos.component.html
+++ b/src/app/deseos/deseos.component.html
@@ -1,1 +1,38 @@
-<p>deseos works!</p>
+<table class="table mt-3"  *ngIf="deseos.length > 0">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Nombre</th>
+        <th scope="col">Precio</th>
+        <th scope="col">Stock</th>
+        <th scope="col">Tools</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let deseo of deseos; let i = index">
+        <th scope="row">{{ i+1 }} </th>
+        <td>{{ deseo.producto.nombre }} </td>
+        <td>{{ deseo.producto.precio }}</td>
+        <td>
+          <label *ngIf="deseo.producto.cantidadStock > 0" class="badge bg-success">{{deseo.producto.cantidadStock}}</label>
+          <label *ngIf="deseo.producto.cantidadStock == 0" class="badge bg-danger">Sin Stock</label>
+        </td>
+        <td>
+            <input type="text" placeholder="Ingrese algo acá..." [(ngModel)]="deseo.descripcion">
+            <div *ngIf="deseo.esActivo">
+
+                <button class="btn btn-info mr-1" (click)="editarDeseo(deseo)">
+                    <i class="fa fa-save"></i>
+                </button>
+                <button class="btn btn-danger" (click)="eliminarDeseo(deseo)">
+                    <i class="fa fa-trash"></i>
+                </button>
+            </div>
+            <div *ngIf="!deseo.esActivo">
+                <label class="badge bg-danger">Deseo Eliminado</label>
+            </div>
+    
+          </td>
+      </tr>
+    </tbody>
+  </table>
